<resources>
    <string name="app_name" translatable="false">WowPaper</string>

    <string name="title_activity_paper" translatable="false">PaperActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <string name="title_newest">Latest</string>
    <string name="title_high_rate">Best</string>
    <string name="title_tag_style">Category</string>
    <string name="title_category">Categories</string>
    <string name="title_collection">Collections</string>
    <string name="title_group">Groups</string>
    <string name="title_drawer_open" translatable="false">DrawerOpen</string>
    <string name="title_drawer_close" translatable="false">DrawerClose</string>

    <string name="title_menu_set_wallpaper">Set As Wallpaper</string>
    <string name="title_menu_share">Share</string>
    <string name="title_menu_filter">Filter</string>
    <string name="title_menu_category">Categories</string>
    <string name="title_menu_group">Groups</string>
    <string name="title_menu_collection">Collections</string>
    <string name="title_menu_like">Likes</string>
    <string name="title_menu_tag">Tags</string>
    <string name="title_menu_settings">Settings</string>
    <string name="title_menu_about">About</string>
    <string name="title_menu_auto_change">Auto Change</string>
    <string name="title_menu_home">Home</string>

    <string name="title_dialog_share">Share Wallpaper:</string>

    <string name="text_set_wallpaper">Set As Wallpaper</string>
    <string name="text_size" translatable="false">%1$d × %2$d</string>
    <string name="text_powered_by" translatable="false">Powered By Wallpaper Abyss</string>
    <string name="text_success" translatable="false">ʕ•ٹ•ʔ</string>
    <string name="text_failed" translatable="false">(｡&gt;﹏&lt;｡)</string>
    <string name="text_like_empty">No liked wallpapers</string>
    <string name="text_like_will_lost_when_uninstalled">Liked Wallpapers will get lost when uninstall this app.</string>

    <string name="toast_set_wallpaper_success">Wallpaper Set Success</string>
    <string name="toast_set_wallpaper_failed">Wallpaper Set Failed</string>
    <string name="toast_wallpaper_downloading">Wallpaper is downloading</string>
    <string name="toast_load_data_failed">Load data failed</string>
    <string name="toast_no_app_response">No apps response this action</string>

    <string name="dialog_msg_device_wallpaper_not_allowed">This device can not set wallpaper.</string>

    <string name="pref_key_abyss" translatable="false">Abyss</string>
    <string name="pref_key_count" translatable="false">Api Usage</string>
    <string name="pref_key_show_info_grid" translatable="false">grid_info_show_or_not</string>
    <string name="pref_key_original_pic_cache" translatable="false">OriginalCache</string>
    <string name="pref_key_glide_pic_cache" translatable="false">GlideCache</string>
    <string name="pref_key_wow_source_code" translatable="false">SourceCode</string>
    <string name="pref_key_feedback">Feedback</string>

    <string name="pref_title_show_info_grid">Show info in grid</string>
    <string name="pref_title_original_pic_cache">Original pictures cache</string>
    <string name="pref_title_glide_pic_cache">Thumbnail pictures cache</string>
    <string name="pref_title_wow_source_code">Source code</string>
    <string name="pref_title_feedback">Feedback</string>

    <string name="pref_summary_abyss">All wallpaper data powered by Wallpaper Abyss(https://wall.alphacoders.com)</string>
    <string name="pref_summary_show_info_grid">Turn on then you can see the original picture width, height and file size.</string>
    <string name="pref_summary_original_pic_cache">%1$d pictures %2$s space, click to clear.</string>
    <string name="pref_summary_glide_pic_cache">%1$d pictures %2$s/%3$s space, click to clear.</string>
    <string name="pref_summary_wow_source_code" translatable="false">https://github.com/boybeak/WowPaper</string>

    <string name="title_activity_hello">HelloActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
