<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <Preference
        android:key="@string/pref_key_abyss"
        android:title="@string/text_powered_by"
        android:summary="@string/pref_summary_abyss"
        >
        <intent android:action="android.intent.action.VIEW"
            android:data="https://wall.alphacoders.com" />
    </Preference>
    <SwitchPreference
        android:key="@string/pref_key_show_info_grid"
        android:title="@string/pref_title_show_info_grid"
        android:checked="true"
        android:defaultValue="true"
        android:summary="@string/pref_summary_show_info_grid"
        />
    <Preference
        android:key="@string/pref_key_original_pic_cache"
        android:title="@string/pref_title_original_pic_cache"
        android:summary="@string/pref_summary_abyss"
        />
    <Preference
        android:key="@string/pref_key_glide_pic_cache"
        android:title="@string/pref_title_glide_pic_cache"
        android:summary="@string/pref_summary_glide_pic_cache"
        />
    <Preference
        android:key="@string/pref_key_count"
        android:title="@string/pref_key_count"
        />

</PreferenceScreen>
