<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <Preference
        android:key="@string/pref_key_abyss"
        android:title="@string/text_powered_by"
        android:summary="@string/pref_summary_abyss"
        >
        <intent android:action="android.intent.action.VIEW"
            android:data="https://wall.alphacoders.com" />
    </Preference>
    <Preference
        android:key="@string/pref_key_wow_source_code"
        android:title="@string/pref_title_wow_source_code"
        android:summary="@string/pref_summary_wow_source_code"
        >
        <intent android:action="android.intent.action.VIEW"
            android:data="@string/pref_summary_wow_source_code" />
    </Preference>
    <EditTextPreference
        android:key="@string/pref_key_feedback"
        android:title="@string/pref_title_feedback"
        />
</PreferenceScreen>
