<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_category"
        android:title="@string/title_menu_category"
        android:icon="@drawable/ic_format_quote_open"
        />
    <item
        android:id="@+id/nav_collection"
        android:title="@string/title_menu_collection"
        android:icon="@drawable/ic_pound"
        />
    <!--<item
        android:id="@+id/nav_tag"
        android:title="@string/title_menu_tag"
        android:icon="@drawable/ic_asterisk"
        />-->
    <item
        android:id="@+id/nav_settings"
        android:title="@string/title_menu_settings"
        android:icon="@drawable/ic_settings"
        />
    <item
        android:id="@+id/nav_about"
        android:title="@string/title_menu_about"
        android:icon="@drawable/ic_help_circle_outline"
        />
</menu>